<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.onebrick.sdk.ui.common.LandingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <include layout="@layout/secure"/>
        <include layout="@layout/brick_toolbar" android:id="@+id/toolbarCommon"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/success_badge" android:id="@+id/success_badge"/>
            <include layout="@layout/error_badge" android:id="@+id/error_badge"/>

            <ImageView
                android:id="@+id/brand_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter_bold"
                android:lineSpacingExtra="2sp"
                android:text="@string/permissionTitle"
                android:textColor="#333333"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/empty_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="2sp"
                android:text="@string/accessPermission"
                android:textColor="#5C5C5C"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp">

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:src="@drawable/contact"
                    tools:srcCompat="@drawable/contact" />

                <TextView
                    android:id="@+id/textView_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@+id/imageView22"
                    android:layout_toRightOf="@+id/imageView22"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/contactTitle"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_2"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/imageView22"
                    android:layout_toRightOf="@+id/imageView22"
                    android:text="@string/contactSubtitle" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:src="@drawable/account"
                    tools:srcCompat="@drawable/account" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView3"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/accountTitle"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView3"
                    android:text="@string/accountSubtitle" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp">

                <ImageView
                    android:id="@+id/imageView33"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:src="@drawable/transaksi"
                    tools:srcCompat="@drawable/transaksi" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginLeft="27dp"
                    android:layout_toEndOf="@+id/imageView33"
                    android:layout_toRightOf="@+id/imageView33"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/transactionTitle"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView332"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView33"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/imageView33"
                    android:layout_toRightOf="@+id/imageView33"
                    android:text="@string/transactionSubtitle" />
            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="5sp"
                android:text="@string/gdpr"
                android:textColor="#070707"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#000000" />

            <Button
                android:id="@+id/allow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/Gray3"
                android:enabled="true"
                android:fontFamily="@font/inter_bold"
                android:soundEffectsEnabled="true"
                android:text="@string/grantPermissionButton"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:theme="@style/DarkButtonStyle" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:textAllCaps="false"
                android:background="#FFFFFF"
                android:fontFamily="@font/inter_bold"

                android:textColor="#F44336"
                android:textSize="16sp"
                android:text="@string/backToAppName"/>

            <TextView
                android:id="@+id/subtitle5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:lineSpacingExtra="2sp"
                android:text='@string/agreementSubtitle'
                android:textColor="#5C5C5C"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    android:id="@+id/secure_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/poweredBy" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="60dp"
                    android:layout_height="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/secure_text_view"
                    android:layout_toRightOf="@+id/secure_text_view"
                    android:src="@drawable/brick_logo" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>