<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.onebrick.sdk.ui.ewallet.EWalletPINActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/White"
      android:orientation="vertical">
    <include layout="@layout/secure"/>
    <include layout="@layout/brick_toolbar" android:id="@+id/toolbarCommon"/>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/White"
        android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:background="@color/White"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <include layout="@layout/success_badge" android:id="@+id/success_badge"/>
        <include layout="@layout/error_badge" android:id="@+id/error_badge"/>
        <TextView
            android:id="@+id/text_title"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="@font/inter_bold"
            android:lineSpacingExtra="2sp"
            android:text="@string/selectAccount"
            android:textColor="#333333"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:src="@drawable/enter_credentials" />

        <TextView
            android:id="@+id/empty_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/otpInput"
            android:textColor="@color/Gray"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/user_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_gravity="left"
            android:gravity="left"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingExtra="2sp"
            android:text="@string/otp"
            android:textColor="@color/Black"
            android:textSize="14sp" />


        <com.goodiebag.pinview.Pinview
            android:id="@+id/squareField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="50dp"
            app:pinHeight="50dp"
            app:pinLength="4"
            app:textSize="13dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            app:password="false"/>


        <TextView
            android:id="@+id/user_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_gravity="left"
            android:gravity="left"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingExtra="2sp"
            android:text="@string/pin"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:maxLength="6"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enterYourPin"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="9.5dp"
            android:paddingBottom="9.5dp" />

        <ImageView
            android:id="@+id/show_pass_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:onClick="showHidePassword"
            android:layout_marginTop="-34dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:padding="5dp"
            android:src="@drawable/eye" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="29.5dp"
            android:background="@color/Gray3"
            android:enabled="true"
            android:fontFamily="@font/inter_semibold"
            android:soundEffectsEnabled="true"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:theme="@style/DarkButtonStyle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center">

          <TextView
              android:id="@+id/secure_text_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:text="@string/poweredBy" />

          <ImageView
              android:id="@+id/imageView4"
              android:layout_width="60dp"
              android:layout_height="10dp"
              android:layout_alignParentTop="true"
              android:layout_marginStart="10dp"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="6dp"
              android:layout_toEndOf="@+id/secure_text_view"
              android:layout_toRightOf="@+id/secure_text_view"
              android:src="@drawable/brick_logo" />
        </RelativeLayout>
      </LinearLayout>
    </ScrollView>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>