<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.onebrick.sdk.ui.ewallet.EwalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:orientation="vertical">
        <include layout="@layout/secure"/>
        <include layout="@layout/brick_toolbar" android:id="@+id/toolbarCommon"/>

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/White"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/White"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:fontFamily="@font/inter_bold"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/successTitleInstituion"
                    android:textColor="#333333"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/enter_credentials" />

                <TextView
                    android:id="@+id/empty_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/successConnected"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="29.5dp"
                    android:background="@color/OrangeRed"
                    android:fontFamily="@font/inter_semibold"
                    android:soundEffectsEnabled="true"
                    android:text="@string/connectAnotherAccount"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:theme="@style/DarkButtonStyle" />
                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="24dp"
                    android:textAllCaps="false"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="#F44336"
                    android:textSize="16sp"
                    android:text="@string/backToAppName"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/secure_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/poweredBy" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="60dp"
                        android:layout_height="10dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@+id/secure_text_view"
                        android:layout_toRightOf="@+id/secure_text_view"
                        android:src="@drawable/brick_logo" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>